--- a/core/common/pom.xml
+++ b/core/common/pom.xml
@@ -9,6 +9,31 @@
   
     <dependencies>
         <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+        </dependency>
+        <dependency>
+	        <groupId>org.springframework.data</groupId>
+	        <artifactId>spring-data-redis</artifactId>
+	    </dependency>
+	    <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
+        <!-- hibernate validator-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+        </dependency>
+        <dependency>
   	      <groupId>org.springframework.boot</groupId>
   	      <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
@@ -17,12 +42,30 @@
   	      <artifactId>orika-core</artifactId>
         </dependency>
         <dependency>
-          <groupId>org.springframework.boot</groupId>
-          <artifactId>spring-boot-starter-aop</artifactId>
+           <groupId>org.springframework</groupId>
+           <artifactId>spring-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
         </dependency>
         <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-data-redis</artifactId>
+          <exclusions>
+              <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jcl-over-slf4j</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+              </exclusion>
+              <exclusion>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+              </exclusion>
+          </exclusions>
         </dependency>
 	    <dependency>
 	      <groupId>commons-lang</groupId>
@@ -41,28 +84,22 @@
 	      <artifactId>poi-excelant</artifactId>
 	    </dependency>
 	    <dependency>
+          <groupId>com.alibaba</groupId>
+          <artifactId>fastjson</artifactId>
+        </dependency>      
+	    <dependency>
 	      <groupId>org.jdom</groupId>
 	      <artifactId>jdom</artifactId>
 	    </dependency>
 	    <dependency>
-	      <groupId>org.javassist</groupId>
-	      <artifactId>javassist</artifactId>
-	    </dependency>
-	    <dependency>
-	      <groupId>com.fasterxml.jackson.core</groupId>
-	      <artifactId>jackson-core</artifactId>
-	    </dependency>
-	    <dependency>
-	      <groupId>com.fasterxml.jackson.core</groupId>
-	      <artifactId>jackson-databind</artifactId>
-	    </dependency>
-	    <dependency>
-	      <groupId>com.fasterxml.jackson.core</groupId>
-	      <artifactId>jackson-annotations</artifactId>
-	    </dependency>
-	    <dependency>
 	        <groupId>net.logstash.logback</groupId>
 	        <artifactId>logstash-logback-encoder</artifactId>
+	        <exclusions>
+	           <exclusion>
+	             <groupId>ch.qos.logback</groupId>
+                 <artifactId>logback-core</artifactId>
+	           </exclusion>
+	        </exclusions>
 	    </dependency>
 	</dependencies>
 </project>
