--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -4,7 +4,7 @@
 	<parent> 
 		<groupId>org.springframework.boot</groupId> 
 		<artifactId>spring-boot-starter-parent</artifactId> 
-		<version>1.5.6.RELEASE</version> 
+		<version>2.0.4.RELEASE</version> 
 	</parent>
   
 	<modelVersion>4.0.0</modelVersion>
@@ -16,12 +16,12 @@
   	 <!-- 定义全局的属性(定义jar包的版本号) -->
     <properties>
         <java.version>1.8</java.version>
-        <spring.version>4.3.4.RELEASE</spring.version>
+        <!-- <spring.version>4.3.4.RELEASE</spring.version> -->
         <mybatis-spring-boot-starter.version>1.3.1</mybatis-spring-boot-starter.version>
         <mybatis-plus.version>2.1.9</mybatis-plus.version>
         <mysql-connector-java.version>5.1.40</mysql-connector-java.version>
         <slf4j.version>1.7.5</slf4j.version>
-        <jackson.version>2.8.5</jackson.version>
+        <jackson.version>2.9.0</jackson.version>
         <c3p0.version>0.9.5.2</c3p0.version>
         <pagehelper.version>5.0.0</pagehelper.version>
         <mapper.version>3.4.0</mapper.version>
@@ -41,13 +41,15 @@
         <aspectjweaver.version>1.9.1</aspectjweaver.version>
         <orika.version>1.5.2</orika.version>
         <poi.version>3.9</poi.version>
+        <velocity.version>1.7</velocity.version>
         <jdom.version>1.1.3</jdom.version>
         <logstash.version>4.11</logstash.version>
         <springfox.swagger.version>2.5.0</springfox.swagger.version>
         <fastjson.version>1.2.31</fastjson.version>
         <axis.version>1.4</axis.version>
+        <hibernate-validator.version>6.0.11.Final</hibernate-validator.version>
         
-        <commons-httpclient.version>3.0</commons-httpclient.version>
+        <commons-httpclient.version>3.1</commons-httpclient.version>
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
         <commons-codec.version>1.9</commons-codec.version>
         <commons-lang3.version>3.3.2</commons-lang3.version>
@@ -56,14 +58,101 @@
         <commons-net.version>3.3</commons-net.version>
         <commons-logging.version>1.2</commons-logging.version>
         <commons-discovery.version>0.2</commons-discovery.version>
+        <commons-beanutils.version>1.9.3</commons-beanutils.version>
+        <commons-pool2.version>2.4.2</commons-pool2.version>
         
         <kafka.version>1.1.0</kafka.version>
         <spring.integration.kafka.version>2.1.0.RELEASE</spring.integration.kafka.version>
+        
+        <logback.version>1.2.0</logback.version>
+        <logstash.version>4.11</logstash.version>
+        
+        <styzf-core.version>1.0.0-SNAPSHOT</styzf-core.version>
+        <styzf-mybatis-plus.version>1.0.0-SNAPSHOT</styzf-mybatis-plus.version>
+        <styzf-kafka.version>1.0.0-SNAPSHOT</styzf-kafka.version>
     </properties>
     
     <!-- 依赖管理配置(用于锁定指定版本) -->
     <dependencyManagement>
 	    <dependencies>
+		    <dependency>
+	             <groupId>com.styzf</groupId>
+	             <artifactId>kafka</artifactId>
+	             <version>${styzf-kafka.version}</version>
+	             <exclusions>
+			         <exclusion>
+			             <groupId>org.apache.commons</groupId>
+			             <artifactId>commons-lang3</artifactId>
+			         </exclusion>
+		         </exclusions>
+	        </dependency>
+		    <dependency>
+	            <groupId>com.styzf</groupId>
+	            <artifactId>styzf-mybatis-plus</artifactId>
+	            <version>${styzf-mybatis-plus.version}</version>
+	            <exclusions>
+		            <exclusion>
+		                <groupId>commons-lang</groupId>
+		                <artifactId>commons-lang</artifactId>
+		            </exclusion>
+		            <exclusion>
+		                <groupId>org.apache.commons</groupId>
+		                <artifactId>commons-lang3</artifactId>
+		            </exclusion>
+		        </exclusions>
+	        </dependency>
+	        <dependency>
+	           <groupId>com.styzf</groupId>
+	           <artifactId>web</artifactId>
+	           <version>${styzf-core.version}</version>
+	        </dependency>
+	        <dependency>
+	           <groupId>com.styzf</groupId>
+	           <artifactId>log</artifactId>
+	           <version>${styzf-core.version}</version>
+	        </dependency>
+	        <dependency>
+	            <groupId>com.styzf</groupId>
+	            <artifactId>common</artifactId>
+	            <version>${styzf-core.version}</version>
+	        </dependency>
+		    <dependency>
+	            <groupId>org.hibernate</groupId>
+	            <artifactId>hibernate-validator</artifactId>
+	            <version>${hibernate-validator.version}</version>
+	        </dependency>
+		    <dependency>
+	            <groupId>net.logstash.logback</groupId>
+	            <artifactId>logstash-logback-encoder</artifactId>
+	            <version>${logstash.version}</version>
+	        </dependency>
+	        <!-- 日志 -->
+	        <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>${logback.version}</version>
+            </dependency> 
+	        <dependency>
+                <groupId>org.apache.velocity</groupId>
+                <artifactId>velocity</artifactId>
+                <version>${velocity.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-lang</groupId>
+                        <artifactId>commons-lang</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>commons-collections</groupId>
+                        <artifactId>commons-collections</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+	    
 	        <!-- 消息队列中间件 -->
 	        <!-- kafka -->
 			<dependency>
@@ -129,6 +218,12 @@
 	            <groupId>io.springfox</groupId>
 	            <artifactId>springfox-swagger2</artifactId>
 	            <version>${springfox.swagger.version}</version>
+	            <exclusions>
+	               <exclusion>
+	                   <groupId>com.fasterxml</groupId>
+	                   <artifactId>classmate</artifactId>
+	               </exclusion>
+	            </exclusions>
 	        </dependency>
 	        <dependency>
 	            <groupId>io.springfox</groupId>
@@ -244,15 +339,15 @@
 			</dependency>
             
             <dependency>
-	            <groupId>org.mybatis.spring.boot</groupId>
-	            <artifactId>mybatis-spring-boot-starter</artifactId>
-	            <version>${mybatis-spring-boot-starter.version}</version>
-	        </dependency>
-            <dependency>
 		        <groupId>com.baomidou</groupId>
 		        <artifactId>mybatis-plus</artifactId>
 		        <version>${mybatis-plus.version}</version>
 		    </dependency>
+		    <dependency>
+	          <groupId>org.mybatis.spring.boot</groupId>
+	          <artifactId>mybatis-spring-boot-starter</artifactId>
+	          <version>${mybatis-spring-boot-starter.version}</version>
+	        </dependency>
             <!-- 分页插件 -->
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
@@ -287,14 +382,31 @@
             
             <!-- apache工具组件 -->
             <dependency>
+	            <groupId>commons-beanutils</groupId>
+	            <artifactId>commons-beanutils</artifactId>
+	            <version>${commons-beanutils.version}</version>
+	        </dependency>
+            <dependency>
                 <groupId>commons-discovery</groupId>
                 <artifactId>commons-discovery</artifactId>
                 <version>${commons-discovery.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>commons-httpclient</groupId>
                 <artifactId>commons-httpclient</artifactId>
                 <version>${commons-httpclient.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -330,7 +442,12 @@
                 <artifactId>commons-logging</artifactId>
                 <version>${commons-logging.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>${commons-pool2.version}</version>
+            </dependency>
+            
             <!-- dubbo相关 -->
             <dependency>
                 <groupId>com.alibaba</groupId>
@@ -369,6 +486,12 @@
                 <groupId>com.github.sgroschupf</groupId>
                 <artifactId>zkclient</artifactId>
                 <version>${zkclient.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.zookeeper</groupId>
+                        <artifactId>zookeeper</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <!-- Redis客户端 -->
             <dependency>
