--- a/test/test-service/src/main/resources/application.yml
+++ b/test/test-service/src/main/resources/application.yml
@@ -1,15 +1,14 @@
 styzf:
   dateConverter:
     date-format:
-      - yyyy-MM-dd HH:mm:ss
-      - yyyy-MM-dd
+      yyyy-MM-dd;yyyy-MM-dd-HH:mm:ss
   config:
     dubbo:
       zookeeper-address: 192.168.114.129:2181,192.168.114.130:2181,192.168.114.131:2181
       owner: styzf
       application-version: 2.0
       provider-version: styzf.2.0.0
-      port: 30002
+      port: 60062
       timeout: 50000
       retries: 0
       threads: 100
@@ -48,11 +47,11 @@ styzf:
         poll-timeout: 300000
         key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
         value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-        group-id: calendar-group
+        group-id: test-group
         auto-offset-reset: earliest
  
 server:
-    port: 9495
+    port: 60093
     session:
         timeout: 30
     context-path: /styzf-test
