部分代码修改提交

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -116,6 +116,11 @@
 	            <artifactId>common</artifactId>
 	            <version>${styzf-core.version}</version>
 	        </dependency>
+	        <dependency>
+	            <groupId>com.baomidou</groupId>
+	            <artifactId>mybatis-plus-support</artifactId>
+	            <version>${mybatis-plus.version}</version>
+	        </dependency>
 		    <dependency>
 	            <groupId>org.hibernate</groupId>
 	            <artifactId>hibernate-validator</artifactId>
