--- a/mybatis/styzf-mybatis-plus/pom.xml
+++ b/mybatis/styzf-mybatis-plus/pom.xml
@@ -19,6 +19,10 @@
 	</properties>
   
 	<dependencies>
+	   <dependency>
+	       <groupId>com.styzf</groupId>
+	       <artifactId>common</artifactId>
+	   </dependency>
 	    <dependency>
 	        <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
