--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,6 +13,7 @@
   	<module>common</module>
   	<module>web</module>
   	<module>log</module>
+  	<module>redis</module>
   </modules>
   <properties>
     <styzf-common.version>1.0.0-SNAPSHOT</styzf-common.version>
