--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -12,15 +12,27 @@
 	<artifactId>parent</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-  
-  	 <!-- 定义全局的属性(定义jar包的版本号) -->
+    
+	<distributionManagement>
+	    <repository>
+	      <id>release</id>
+	      <name>release resp</name>
+	      <url>http://192.168.13.132:8082/nexus/content/repositories/releases/</url>
+	    </repository>
+	    <snapshotRepository>
+	      <id>snapshots</id>
+	      <name>snapshots resp</name>
+	      <url>http://192.168.13.132:8082/nexus/content/repositories/snapshots/</url>
+	    </snapshotRepository>
+	  </distributionManagement>
+  	
+  	<!-- 定义全局的属性(定义jar包的版本号) -->
     <properties>
         <java.version>1.8</java.version>
         <!-- <spring.version>4.3.4.RELEASE</spring.version> -->
         <mybatis-spring-boot-starter.version>1.3.1</mybatis-spring-boot-starter.version>
         <mybatis-plus.version>2.1.9</mybatis-plus.version>
         <mysql-connector-java.version>5.1.40</mysql-connector-java.version>
-        <slf4j.version>1.7.5</slf4j.version>
         <jackson.version>2.9.0</jackson.version>
         <c3p0.version>0.9.5.2</c3p0.version>
         <pagehelper.version>5.0.0</pagehelper.version>
@@ -43,7 +55,6 @@
         <poi.version>3.9</poi.version>
         <velocity.version>1.7</velocity.version>
         <jdom.version>1.1.3</jdom.version>
-        <logstash.version>4.11</logstash.version>
         <springfox.swagger.version>2.5.0</springfox.swagger.version>
         <fastjson.version>1.2.31</fastjson.version>
         <axis.version>1.4</axis.version>
@@ -61,61 +72,17 @@
         <commons-beanutils.version>1.9.3</commons-beanutils.version>
         <commons-pool2.version>2.4.2</commons-pool2.version>
         
+        <lombok.version>1.16.16</lombok.version>
         <kafka.version>1.1.0</kafka.version>
         <spring.integration.kafka.version>2.1.0.RELEASE</spring.integration.kafka.version>
         
-        <logback.version>1.2.0</logback.version>
         <logstash.version>4.11</logstash.version>
         
-        <styzf-core.version>1.0.0-SNAPSHOT</styzf-core.version>
-        <styzf-mybatis-plus.version>1.0.0-SNAPSHOT</styzf-mybatis-plus.version>
-        <styzf-kafka.version>1.0.0-SNAPSHOT</styzf-kafka.version>
     </properties>
     
     <!-- 依赖管理配置(用于锁定指定版本) -->
     <dependencyManagement>
 	    <dependencies>
-		    <dependency>
-	             <groupId>com.styzf</groupId>
-	             <artifactId>kafka</artifactId>
-	             <version>${styzf-kafka.version}</version>
-	             <exclusions>
-			         <exclusion>
-			             <groupId>org.apache.commons</groupId>
-			             <artifactId>commons-lang3</artifactId>
-			         </exclusion>
-		         </exclusions>
-	        </dependency>
-		    <dependency>
-	            <groupId>com.styzf</groupId>
-	            <artifactId>styzf-mybatis-plus</artifactId>
-	            <version>${styzf-mybatis-plus.version}</version>
-	            <exclusions>
-		            <exclusion>
-		                <groupId>commons-lang</groupId>
-		                <artifactId>commons-lang</artifactId>
-		            </exclusion>
-		            <exclusion>
-		                <groupId>org.apache.commons</groupId>
-		                <artifactId>commons-lang3</artifactId>
-		            </exclusion>
-		        </exclusions>
-	        </dependency>
-	        <dependency>
-	           <groupId>com.styzf</groupId>
-	           <artifactId>web</artifactId>
-	           <version>${styzf-core.version}</version>
-	        </dependency>
-	        <dependency>
-	           <groupId>com.styzf</groupId>
-	           <artifactId>log</artifactId>
-	           <version>${styzf-core.version}</version>
-	        </dependency>
-	        <dependency>
-	            <groupId>com.styzf</groupId>
-	            <artifactId>common</artifactId>
-	            <version>${styzf-core.version}</version>
-	        </dependency>
 	        <dependency>
 	            <groupId>com.baomidou</groupId>
 	            <artifactId>mybatis-plus-support</artifactId>
@@ -126,22 +93,6 @@
 	            <artifactId>hibernate-validator</artifactId>
 	            <version>${hibernate-validator.version}</version>
 	        </dependency>
-		    <dependency>
-	            <groupId>net.logstash.logback</groupId>
-	            <artifactId>logstash-logback-encoder</artifactId>
-	            <version>${logstash.version}</version>
-	        </dependency>
-	        <!-- 日志 -->
-	        <dependency>
-                <groupId>ch.qos.logback</groupId>
-                <artifactId>logback-classic</artifactId>
-                <version>${logback.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>ch.qos.logback</groupId>
-                <artifactId>logback-core</artifactId>
-                <version>${logback.version}</version>
-            </dependency> 
 	        <dependency>
                 <groupId>org.apache.velocity</groupId>
                 <artifactId>velocity</artifactId>
@@ -169,20 +120,6 @@
                 <groupId>org.springframework.integration</groupId>
                 <artifactId>spring-integration-kafka</artifactId>
                 <version>${spring.integration.kafka.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.slf4j</groupId>
-                        <artifactId>slf4j-api</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.slf4j</groupId>
-                        <artifactId>slf4j-log4j12</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>log4j</groupId>
-                        <artifactId>log4j</artifactId>
-                    </exclusion>
-                </exclusions>
                 <scope>compile</scope>
             </dependency>
 			<!-- activeMQ依赖 -->
@@ -353,31 +290,7 @@
 	          <artifactId>mybatis-spring-boot-starter</artifactId>
 	          <version>${mybatis-spring-boot-starter.version}</version>
 	        </dependency>
-            <!-- 分页插件 -->
-            <dependency>
-                <groupId>com.github.pagehelper</groupId>
-                <artifactId>pagehelper</artifactId>
-                <version>${pagehelper.version}</version>
-            </dependency>
-            <!-- 通用Mapper -->
-            <dependency>
-                <groupId>tk.mybatis</groupId>
-                <artifactId>mapper</artifactId>
-                <version>${mapper.version}</version>
-            </dependency>
-            <!-- 连接池 -->
-            <dependency>
-                <groupId>com.mchange</groupId>
-                <artifactId>c3p0</artifactId>
-                <version>${c3p0.version}</version>
-            </dependency>
             
-            <!-- 日志 -->
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-log4j12</artifactId>
-                <version>${slf4j.version}</version>
-            </dependency>
             <!-- Jackson JSON处理工具包 -->
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
@@ -538,8 +451,14 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <dependency>
+		        <groupId>org.projectlombok</groupId>
+		        <artifactId>lombok</artifactId>
+		        <version>${lombok.version}</version>
+		    </dependency>
         </dependencies>
     </dependencyManagement>
+    
     <!-- 项目构建部分 -->
     <build>
         <finalName>${project.artifactId}</finalName>
