--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -2,29 +2,27 @@
 	     xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance" 
 	     xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent> 
-		<groupId>org.springframework.boot</groupId> 
-		<artifactId>spring-boot-starter-parent</artifactId> 
-		<version>2.0.4.RELEASE</version> 
+		  <groupId>com.styzf</groupId>
+		  <artifactId>common-parent</artifactId>
+		  <version>1.0.0-SNAPSHOT</version>
 	</parent>
   
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.styzf</groupId>
 	<artifactId>parent</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
     
 	<distributionManagement>
 	    <repository>
 	      <id>release</id>
 	      <name>release resp</name>
-	      <url>http://192.168.13.132:8082/nexus/content/repositories/releases/</url>
+	      <url>http://192.168.13.135:8082/nexus/content/repositories/releases/</url>
 	    </repository>
 	    <snapshotRepository>
 	      <id>snapshots</id>
 	      <name>snapshots resp</name>
-	      <url>http://192.168.13.132:8082/nexus/content/repositories/snapshots/</url>
+	      <url>http://192.168.13.135:8082/nexus/content/repositories/snapshots/</url>
 	    </snapshotRepository>
-	  </distributionManagement>
+	</distributionManagement>
   	
   	<!-- 定义全局的属性(定义jar包的版本号) -->
     <properties>
@@ -38,7 +36,7 @@
         <pagehelper.version>5.0.0</pagehelper.version>
         <mapper.version>3.4.0</mapper.version>
         <jedis.version>2.9.0</jedis.version>
-        <dubbo.version>2.5.3</dubbo.version>
+        <dubbo.version>2.6.2</dubbo.version>
         <zookeeper.version>3.4.8</zookeeper.version>
         <zkclient.version>0.1</zkclient.version>
         <solrj.version>5.3.0</solrj.version>
@@ -60,23 +58,8 @@
         <axis.version>1.4</axis.version>
         <hibernate-validator.version>6.0.11.Final</hibernate-validator.version>
         
-        <commons-httpclient.version>3.1</commons-httpclient.version>
-        <commons-fileupload.version>1.3.1</commons-fileupload.version>
-        <commons-codec.version>1.9</commons-codec.version>
-        <commons-lang3.version>3.3.2</commons-lang3.version>
-        <commons-lang.version>2.6</commons-lang.version>
-        <commons-io.version>1.3.2</commons-io.version>
-        <commons-net.version>3.3</commons-net.version>
-        <commons-logging.version>1.2</commons-logging.version>
-        <commons-discovery.version>0.2</commons-discovery.version>
-        <commons-beanutils.version>1.9.3</commons-beanutils.version>
-        <commons-pool2.version>2.4.2</commons-pool2.version>
-        
-        <lombok.version>1.16.16</lombok.version>
         <kafka.version>1.1.0</kafka.version>
         <spring.integration.kafka.version>2.1.0.RELEASE</spring.integration.kafka.version>
-        
-        <logstash.version>4.11</logstash.version>
         
     </properties>
     
@@ -171,11 +154,6 @@
 	            <groupId>io.springfox</groupId>
 	            <artifactId>springfox-swagger-ui</artifactId>
 	            <version>${springfox.swagger.version}</version>
-	        </dependency>
-	        <dependency>
-	            <groupId>net.logstash.logback</groupId>
-	            <artifactId>logstash-logback-encoder</artifactId>
-	            <version>${logstash.version}</version>
 	        </dependency>
 	        <dependency>
 	          <groupId>org.jdom</groupId>
@@ -298,86 +276,13 @@
                 <version>${jackson.version}</version>
             </dependency>
             
-            <!-- apache工具组件 -->
-            <dependency>
-	            <groupId>commons-beanutils</groupId>
-	            <artifactId>commons-beanutils</artifactId>
-	            <version>${commons-beanutils.version}</version>
-	        </dependency>
-            <dependency>
-                <groupId>commons-discovery</groupId>
-                <artifactId>commons-discovery</artifactId>
-                <version>${commons-discovery.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>commons-logging</groupId>
-                        <artifactId>commons-logging</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>commons-httpclient</groupId>
-                <artifactId>commons-httpclient</artifactId>
-                <version>${commons-httpclient.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>commons-logging</groupId>
-                        <artifactId>commons-logging</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-lang3</artifactId>
-                <version>${commons-lang3.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>commons-lang</groupId>
-                <artifactId>commons-lang</artifactId>
-                <version>${commons-lang.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-io</artifactId>
-                <version>${commons-io.version}</version>
-            </dependency>
-
-            <!-- 文件上传组件 -->
-            <dependency>
-                <groupId>commons-fileupload</groupId>
-                <artifactId>commons-fileupload</artifactId>
-                <version>${commons-fileupload.version}</version>
-            </dependency>
-            <!-- 加密解密 -->
-            <dependency>
-                <groupId>commons-codec</groupId>
-                <artifactId>commons-codec</artifactId>
-                <version>${commons-codec.version}</version>
-            </dependency>
-            <!-- 日志 -->
-            <dependency>
-                <groupId>commons-logging</groupId>
-                <artifactId>commons-logging</artifactId>
-                <version>${commons-logging.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-pool2</artifactId>
-                <version>${commons-pool2.version}</version>
-            </dependency>
+            
             
             <!-- dubbo相关 -->
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>dubbo</artifactId>
                 <version>${dubbo.version}</version>
-                <exclusions>
-                    <!-- 排除spring的jar包依赖 -->
-                    <exclusion>
-                        <groupId>org.springframework</groupId>
-                        <artifactId>spring</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
             <!-- zookeeper分布式协调服务 -->
             <dependency>
@@ -451,11 +356,6 @@
                     </exclusion>
                 </exclusions>
             </dependency>
-            <dependency>
-		        <groupId>org.projectlombok</groupId>
-		        <artifactId>lombok</artifactId>
-		        <version>${lombok.version}</version>
-		    </dependency>
         </dependencies>
     </dependencyManagement>
     
