版本控制小修改

--- a/mybatis/styzf-mybatis-plus/pom.xml
+++ b/mybatis/styzf-mybatis-plus/pom.xml
@@ -22,6 +22,7 @@
 	   <dependency>
 	       <groupId>com.styzf</groupId>
 	       <artifactId>common</artifactId>
+	       <version>${project.parent.version}</version>
 	   </dependency>
 	    <dependency>
 	        <groupId>org.aspectj</groupId>
