--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -14,4 +14,29 @@
   <modules>
   	<module>styzf-mybatis-plus</module>
   </modules>
+  
+  <properties>
+     <mybatis-spring-boot-starter.version>1.3.1</mybatis-spring-boot-starter.version>
+     <mybatis-plus.version>2.1.9</mybatis-plus.version>
+  </properties>
+  
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-support</artifactId>
+            <version>${mybatis-plus.version}</version>
+        </dependency>
+        <dependency>
+	        <groupId>com.baomidou</groupId>
+	        <artifactId>mybatis-plus</artifactId>
+	        <version>${mybatis-plus.version}</version>
+	    </dependency>
+	    <dependency>
+          <groupId>org.mybatis.spring.boot</groupId>
+          <artifactId>mybatis-spring-boot-starter</artifactId>
+          <version>${mybatis-spring-boot-starter.version}</version>
+        </dependency>
+  	</dependencies>
+  </dependencyManagement>
 </project>
