删除多余的内容

--- a/sso/sso-web/pom.xml
+++ b/sso/sso-web/pom.xml
@@ -36,6 +36,7 @@
     <dependency>
        <groupId>com.styzf</groupId>
        <artifactId>web</artifactId>
+       <version>${project.parent.version}</version>
     </dependency>
     <!-- 配置servlet-api、jsp-api、el-api依赖(jsp视图) -->
     <dependency>
