--- a/sso/sso-web/pom.xml
+++ b/sso/sso-web/pom.xml
@@ -30,7 +30,13 @@
     </dependency>
     <dependency>
        <groupId>com.styzf</groupId>
+       <artifactId>redis</artifactId>
+       <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+       <groupId>com.styzf</groupId>
        <artifactId>web</artifactId>
+       <version>${project.parent.version}</version>
     </dependency>
     <!-- 配置servlet-api、jsp-api、el-api依赖(jsp视图) -->
     <dependency>
